# experiments

./: .gitignore  README.md
chall-win/: Dockerfile
chall-win/windows/: setup.ps1
class_archiver/: .gitignore  scrapy.cfg
class_archiver/class_archiver/: __init__.py  canvas.py  items.py  middlewares.py  pipelines.py  settings.py
class_archiver/class_archiver/spiders/: canvas.py  panopto.py
family-link-code-generator/: Cargo.toml  README.md  main.c
family-link-code-generator/src/: main.rs
genius_spider/: README.md  all_slugs.txt  scrapy.cfg  slugs.txt
genius_spider/genius_spider/: items.py  middlewares.py  pipelines.py  settings.py
genius_spider/genius_spider/spiders/: genius.py
ko_reader/: 2.1.stripped.ko  ko_reader.py  ko_reader_old.py  registers.py  regsize.c  regutil  regutil.c  relocation.py  setup_interactive.py  simple_emu.py  sixth_gear.py
library-autosearch/: import.sh  main.py
mitcafe-scrape/: .gitignore  main.py
scrapy-tutorial/: quotes.jsonl
scrapy-tutorial/tutorial/: settings.py
scrapy-tutorial/tutorial/spiders/: quotes.py
steno-flashcards/: main.py  pyproject.toml
