[tool.poetry]
name = "steno-flashcards"
version = "0.1.0"
description = ""
authors = ["Spencer Pogorzelski <34356756+Scoder12@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
plover-stroke = "^1.1.0"
lxml = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
